hphp/hack/test/typecheck/enum_class_label/memoized_invalid_sample_rate.php.exp
File "memoized_invalid_sample_rate.php", line 3, characters 38-42:
Expected a valid 32-bit integer as a sample rate. (Parsing[1002])
