hphp/hack/test/typecheck/enum_class_label/memoized_invalid_sample_rate.php
<?hh

<<__Memoize(#SoftMakeICInaccessible, 'abc')>>
function foo(): void {}
